# foresight

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTEXT.md  Dockerfile  README.md  compose.yaml  manage.py  pyproject.toml
.agents/skills/orchestrate-build/: SKILL.md
.agents/skills/wayfinder-quick/: SKILL.md
.cursor/: Dockerfile  environment.json
.github/workflows/: ci.yml
.scratch/foresight-v1/: map.md  spec.md
api/: __init__.py  auth.py  errors.py  middleware.py  routes.py  run_room.py  schemas.py  terminal_proxy.py  webhooks.py
core/: api_tokens.py  default_harness_prompt.md  harness.py  intake.py  models.py  organizations.py  outcome.py  repositories.py  result_contract.py  run_control.py  session_exports.py  snapshots.py
core/fixtures/: demo.json
core/migrations/: 0001_initial.py  0002_run_pr_merged_at.py  0003_run_agent_base_url.py  0004_org_agent_api_key_org_agent_base_url_and_more.py  0004_org_concurrency_cap_run_failure_detail_and_more.py  0005_apitoken.py  0006_repo_base_snapshot_repo_connection_status_and_more.py  0006_run_failure_reason_and_org_cap_constraint.py  0007_run_failure_reason.py  0007_surface_connections_and_github_state.py  0008_alter_repo_harness_prompt.py  0009_repo_setup_verification_output_and_more.py  0010_run_agent_log_path_run_setup_log_path.py  __init__.py
docs/agents/: domain.md
executor/: __init__.py  daytona.py  fake.py  protocol.py
foresight/: __init__.py  asgi.py  settings.py  urls.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  Terminal.tsx  api.ts  main.tsx  styles.css
orchestration/: __init__.py  executor_backend.py  reconciliation.py  run_orchestrator.py  tasks.py
surfaces/: __init__.py  github.py  github_client.py  protocol.py  registry.py
tests/: test_api.py  test_api_tokens.py  test_auth_flow.py  test_daytona_contract.py  test_dispatch.py  test_encryption.py  test_executor_contract.py  test_github_webhooks.py  test_harness_prompt.py  test_jobs.py  test_manual_signal.py  test_org_isolation.py  test_org_settings.py  test_outcome.py  test_reconciliation.py  test_result_contract.py  test_role_enforcement.py  test_run_concurrency.py  test_run_constraint.py  test_run_control.py  test_run_durability.py  test_run_failures.py  test_run_room.py  test_snapshots.py
tools/orchestrator/: README.md  frontier.mjs  launch.mjs  package-lock.json  package.json  peek.mjs  resume.mjs  state.json  state.mjs  status.mjs  tickets.mjs  watch.mjs  worker-prompt.mjs
(+28 files in other folders)
