[project]
name = "foresight"
version = "0.1.0"
description = "Autonomous software factory control plane"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.7",
    "django-fernet-encrypted-fields>=0.4.0",
    "django-ninja>=1.6.2",
    "procrastinate[django]>=3.9.0",
    "psycopg[binary,pool]>=3.3.4",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.6",
    "mypy>=2.2.0",
    "pytest>=9.1.1",
    "pytest-django>=4.12.0",
    "ruff>=0.15.21",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "foresight.settings"
python_files = ["test_*.py"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "DJ"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
strict = true
exclude = ["core/migrations/"]

[tool.django-stubs]
django_settings_module = "foresight.settings"
