[project]
name = "foresight"
version = "0.1.0"
description = "Autonomous software factory control plane"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "daytona>=0.196.0",
    "django>=6.0.7",
    "django-allauth[headless]>=65.18.0",
    "django-fernet-encrypted-fields>=0.4.0",
    "django-ninja>=1.6.2",
    "httpx>=0.28.1",
    "jsonschema[format]>=4.26.0",
    "procrastinate[django]>=3.9.0",
    "psycopg[binary,pool]>=3.3.4",
    "pyjwt[crypto]>=2.13.0",
    "uvicorn[standard]>=0.51.0",
    "websockets>=16.1",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.6",
    "mypy>=2.2.0",
    "pytest>=9.1.1",
    "pytest-django>=4.12.0",
    "ruff>=0.15.21",
    "types-jsonschema>=4.26.0.20260518",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "foresight.settings"
python_files = ["test_*.py"]
testpaths = ["tests"]
markers = [
    "daytona: provider-credentialed Daytona contract tests",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "DJ"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["DJ008"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
strict = true
exclude = ["core/migrations/"]

[[tool.mypy.overrides]]
module = ["allauth.*", "encrypted_fields.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["daytona.*"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "foresight.settings"
